# cuda-vscode-setup

./: .clang-format  .gitignore  CMakeLists.txt  add.cu  autotuning.bash  main.cu  mm.cu  mm_coalesced.cu  mm_tiled.cu  readme.md  requirements.txt  sgemmtriton.py  sgemmtriton_tiled.py  sgemmtriton_warptiling.py
.github/workflows/: build.yml  pybind.yml  style.yml
docs/: 00_instruction_level_parallelism.md  01_register_blocking.md  02_branch_divergence.md  register_blocking_and_ilp.md
examples/cuda-gdb/: install_python3.6.bash
examples/pybind/: CMakeLists.txt  build.bash  main.cu  python_interface.py
examples/triton/: benchmark_gemm.py  fw_brevitas.py  fw_torch.py  gemm_triton.py  gemv_triton.py  mvm_triton.py  sgemmtriton.py  sgemmtriton_warptiling.py  softmax_triton.py  test_gemm.py  train.py  train_brevitas.py  train_torch.py  triton.md
examples/triton/src/: gemm_kernel.py  gemm_kernel_0.py  gemm_kernel_1.py  gemm_kernel_2.py  generic.py  print_stats.py  torch_kernel.py
inc/: benchmark.cuh  sgemm.cuh  sgemm_kernel_dimension.cuh  softmax.cuh  utils.cuh
inc/sgemm/: benchmark_sgemm.cuh  sgemm.cuh  sgemm_kernel_dimensions.cuh
inc/softmax/: benchmark_softmax.cuh  softmax.cuh  softmax_kernel_dimensions.cuh
src/: 00_sgemm_simple.cu  01_sgemm_coalesced.cu  02_sgemm_tiled.cu  03_sgemm_tiled_2d.cu  04_sgemm_tiled_2d_vectorized_1.cu  05_sgemm_tiled_2d_vectorized_2.cu  06_sgemm_warptiling.cu  07_tensor_cores.cu  08_softmax_simple.cu  09_softmax_block_sum.cu  10_softmax_block_sum_binary.cu  11_softmax_binary_non_divergent.cu  12_softmax_sequential_access.cu  12_softmax_warp_shuffle.cu  benchmark.cu  benchmark_cublas_kernels.cu  sgemm_coalesced.cu  sgemm_naive.cu  sgemm_tiled.cu  sgemm_tiled_2d.cu  sgemm_tiled_2d_vectorized.cu  sgemm_tiled_2d_vectorized_2.cu  sgemm_warptiling.cu  softmax_cpu.cpp
src/sgemm/: 00_sgemm_simple.cu  01_sgemm_coalesced.cu  02_sgemm_tiled.cu  03_sgemm_tiled_2d.cu  04_sgemm_tiled_2d_vectorized_1.cu  05_sgemm_tiled_2d_vectorized_2.cu  06_sgemm_warptiling.cu  07_tensor_cores.cu  CMakeLists.txt  benchmark_sgemm.cu  main.cu  sgemm_cpu.cpp
src/softmax/: 00_softmax_simple.cu  01_softmax_block_sum.cu  02_softmax_block_sum_binary.cu  03_softmax_binary_non_divergent.cu  04_softmax_warp_shuffle.cu  09_softmax_block_sum.cu  10_softmax_block_sum_binary.cu  11_softmax_binary_non_divergent.cu  12_softmax_sequential_access.cu  12_softmax_warp_shuffle.cu  CMakeLists.txt  benchmark_softmax.cu  main.cu  softmax_cpu.cpp
util/: format_cpp.py  format_py.py
